<resources>
    <string name="app_name">Chocolate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">Background</string>
    <string name="title_UAE">UAE</string>
    <string name="title_SaudiArabia">Saudi Arabia</string>
    <string name="title_MarketTrends">Market Trends</string>
    <string name="back_text1">\nChocolate is processed from the pod of the cacao plant, grown in the tropical belt. The origins of chocolate are traced back to the Maya people who were likely the first to cultivate the cacao plant. The early chocolate drink was mixed with cinnamon and pepper and tasted bitter and strong.  From the 1800s to the 20th Century, it evolved from a drink to the current varieties we have today.  Some important components in chocolate are antioxidants, cocoa butter, caffeine, theobromine and phenylethylamine, and the presence of psychoactive substances which account for its pleasurable effects.\n\nThe cacao tree which is grown in a tropical belt can be as tall 12 meters and takes 10 years to reach maximum yield.  The color of the tree’s pod can range from brown/yellow to purple and contains about 20 to 40 seeds or cocoa beans.  The taste of the cocoa bean depends not only on the variety of plant, but also on the soil, environmental temperature and the amount of sunlight and rain received. After a process of fermentation and drying in the sun, the beans are packed either for local consumption or to manufacture into cocoa and chocolate. During the processing into cocoa or chocolate, the seeds are first roasted to the typical color we know cocoa to have. Lastly, the shell is removed from the roasted seeds which are then ground into fine grain or powder.\n\nToday, the cocoa plant is grown in several countries, mainly, Ivory Coast, Ghana, Indonesia, Nigeria, Brazil, Cameroon, Ecuador, Dominican Republic and Papua New Guinea. Other countries cultivating it are Madagascar, Malaysia, Mexico, some Caribbean islands, such as Granada, and Cuba, and some Pacific islands, like Samoa.\n</string>
    <string name="back_text2">1.Fondant: This is the most expensive chocolate.  It has an intense and persistent aroma of cocoa and looks bright and shiny.  It also melts in your mouth leaving a pleasant bitter after taste.  The percentage of cocoa is one of the main characteristics determining fondant’s quality and the best ones contain at least 70% cocoa.\n\n2.Gianduja: Made from hazelnuts, cocoa and sugar and sometimes, milk, almonds or walnuts are added as well.\n\n3.Milky: This variety of chocolate contains no less than 20-25% cocoa, and includes other ingredients such as cocoa butter, sugar, and milk powder.  “A good milk chocolate should have a shiny appearance. The scent must be intense and persistent. It has first the smell of vanilla and milk and finally the cocoa must prevail. A good milk chocolate is crisp, but dissolves quickly in the mouth to a slightly mushy paste. Finally, the taste should be sweet with a slight bitter note from the cocoa” (Verna, 115).\n\n4.White: This variety of chocolate contains cocoa butter, sugar, milk powder and vanilla.  It is usually used to prepare things like mousse, cream and desserts because of how sweet it is.</string>
    <string name="back_text3">Substance and action (Verna, 120)\n\nDopamine: Many substances that produce pleasure trigger the release of this transmitter in the limbic system: heroin, cocaine, alcohol, nicotine.\n\nSerotonin: Controls mood and gives the “antidepressant” effect of chocolate.\n\nAnandomide: A lipid (named from a Sanskrit word that means happiness). Present in the brain as an endogenous substance, it interacts with cannabinoid receptors.\n\nPhenylethylamine: Neurotransmitter responsible for the state of mood and pleasure. It has a stimulant effect and thus stimulates good humor.\n</string>
    <string name="back_text4">\nFlavonoids: These are antioxidants that act against aging but are not present in white chocolate.\n\nCocoa butter: Has exceptional nutritional properties for skin.  It purifies, soothes and moisturizes even the driest skin.\n\nMagnesium: Stimulates the growth of skin cells and improves mood as well.\n\nCaffeine: It is a stimulant and tones skin.\n\nTheobromine: Stimulates heart muscle and nervous system. Higher concentrations of this is found in dark chocolate.  This nutrient has the greatest impact on health, but the concentration varies depending on the variety of chocolate.\n\nSome of the main properties of cocoa beans that are beneficial to health are: anti-inflammatory, anti-diabetic and anti-obesity, cardioprotective, improves liver functions, neuroprotective, improves intestinal flora, reduces stress hormone, and it reduces symptoms of glaucoma and cataract.\n\n\n\n\n\n</string>
    <string name="sa_text1">\nBack in 2016, the Saudi Arabian chocolate market saw a growth of about 20%.  Amid hard circumstances facing people these days, having a piece of chocolate just like having a cup of coffee became important.  The chocolate and coffee market in Saudi Arabia have exceeded SAR4 billion with more than 160 chocolate factories.\n\nBecause the Saudi consumer started to pair the Arabic coffee with chocolate instead of dates it increased chocolate import to the Kingdom and also caused the expansion of its market and the emergence of new products in this field.  Most Saudi consumers want light chocolate that’s low in sugar and oils.  Chocolate import in Saudi Arabia has reached 26,000 tons.  Most of the other chocolate producers in the region, such as a number in Saudi Arabia, focus on their market and means of production; but do not address any sourcing or ethical concerns.\n\nSaudi Arabia has a large young population who enjoy indulging in confectionery products to relax after a hectic day.  The Saudi Arabia confectionery market is dominated by Kraft’s Food being the market leader followed by Mars and Nestle. Local manufacturers also play a significant role in the confectionery market due to proximity to the market and increasing awareness among the consumers. Saudi Arabia imports chocolate confectionery and sugar confectionery from countries such as Italy, Spain, Germany and Belgium. Increasing imports from different countries due to high quality poses a challenge for the country’s economy and local manufacturers as well.  The confectionery industry has a considerable growth potential in Saudi Arabia, but the area of concern is due to the high input cost of raw materials such as sugar, cocoa, milk powder and increasing packaging cost. Increasing tariffs and rising custom duty makes the imported confectionery costly and, in the process, affects the wealth of the country.</string>
    <string name="uae_text1">\nAl Nassma is the world\'s first and finest camel milk chocolate maker and it was founded in Dubai, UAE. Al Nassma uses a low-profile roast for their cocoa to bring out the salty creaminess present in camel milk for their milk chocolate bars. The use of camel milk, as opposed to cow’s milk, delivers a unique flavor profile that cannot be found in any other chocolate bar. Camels only produce just less than 2 gallons of milk a day, compared to cows which produce on average about 7 gallons of milk per day. Al Nassma says that it is “dedicated to making high end unadulterated chocolate”. All the ingredients used to make these chocolate from the milk to nuts and spices are said to be pure and the bars contain no additives. In addition, their bars are naturally gluten free, and are made in a gluten free facility. The name Al Nassma comes from the phrase that residents of Dubai use to describe the gentle breeze rolling in from the desert.\n\nWith 3,000 camels on its Dubai farm, the company sells chocolates through its farm-attached store as well as in luxury hotels and private airlines.  Their aim is to be the Godiva of the Middle East.  Camels\' milk is seen as healthier than cows\' milk, containing five times more vitamin C, less fat, less lactose and more insulin, making it a good option for diabetics and the lactose intolerant.\n\nEach Al Nassma chocolate bar costs around Dh35 or 9.50 USD.  Dark chocolates could have about 2 to 3 per cent camel milk, while milk chocolates are likely to have 25 per cent camel milk.\n</string>
    <string name="uae_text2">Whether you’re in a premium cabin or in economy class, your chocolate adventure begins even before you land on United Arab Emirates soil.  Every year, over 11 million pieces of gourmet chocolate are obtained from around the world to complete the Emirates fine dining experience prepared by award-winning chefs.  There are a variety of chocolate desserts and treats in all classes.\n\nBorders of First and Business class get to sample pralines and bonbons from 8 gourmet chocolatiers from around the globe.  Some are even local home-grown brands from the United Arab Emirates.  Each chocolate brand is on board for 3 months before a new selection is introduced to its passengers.\n\nSome of these gourmet brands include the following:\n\n1.Godiva from Belgium\n\n2.Valrhona from France\n\n3.Canonica from Switzerland\n\n4.Pacari from Ecuador\n\n5.Neuhaus from Belgium\n\n6.Hotel Chocolat from the United Kingdom\n\n7.Forrey and Galland from the UAE\n\n8.Coco Jalila, also from the UAE\n\nChocolate on all Emirates flights is the finishing touch to their destination inspired, multi-course meal.\n\nThe chocolate pieces are served in pairs and the selection includes some of the following:\n\n1.Coffee Cream\n\n2.Almond Praline\n\n3.70% Guanaja dark chocolate\n\n4.White Lemon Truffle\n\n5.Dark Cocoa Nibs\n\n6.Pistachio Praline\n\n7.Chocolate with Cuzco Salt and Nibs\n\nIn First class, passengers are gifted with personal goodie baskets with more cocoa treats.  On board, Emirates also offers a solid chocolate bar collection with a variety of flavors such as mixed berries white chocolate and honeycomb crisp milk chocolate.  Chocolate desserts and hot chocolate is on the menu across all classes and on longer flights, the crew offers chocolate lollipops to children during festive celebrations.  Passengers can also help themselves to M n Ms, chocolate mini treats and cakes in the lounge.\n</string>
    <string name="uae_text3">Around the globe, world chocolate day is celebrated on July 7th and here are some things to try especially if you find yourself in the UAE around this time:\n\n1.Try a chocolate-glazed doughnut from Krispy Kreme.\n\n2.Turkish delight - take a trip to Grosvenor House Dubai Marina and try the sugary treat, Cikolata ve Susam.  It is a creamy blend of rich dark chocolate and hazelnut ice cream topped with a swirl of black sesame praline and sesame halwa crumble and costs Dh45 or about 12.25 USD.\n\n3.The Coffee Club brings delicious cocoa-based eats with the best of all is dark chocolate sauce that serves as a plate for a chocolate cake topped with ice cream, chocolate shavings and pistachios. Yum!\n\n4.Dim sum yum - Din Tai Fung\'s Chocolate Xiao Long Bao is a work of art and it comes with a picture of how to eat it. Poke a hole in the dim sum to let the steam out and when you feel you can handle the heat, put it in your mouth whole.\n\n\n\n\n\n</string>
</resources>