<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/brown_white_gradient">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="25dp">

        <RelativeLayout
            android:id="@+id/outer_relLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hist_of_coco"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/img1"
                android:text="@string/back_text1"
                android:id="@+id/text1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_below="@id/text1"
                android:src="@drawable/tour_img"
                android:id="@+id/img2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/img2"
                android:text="\nVarieties of chocolate\n"
                android:textSize="28sp"
                android:layout_centerVertical="true"
                android:fontFamily="cursive"
                android:textColor="#33A1FF"
                android:id="@+id/text2"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text2"
                android:text="@string/back_text2"
                android:id="@+id/text3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text3"
                android:text="\nPsychoactive substances in chocolate\n"
                android:textSize="28sp"
                android:textColor="#33A1FF"
                android:layout_centerVertical="true"
                android:fontFamily="cursive"
                android:id="@+id/text4"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text4"
                android:text="@string/back_text3"
                android:id="@+id/text5"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_below="@id/text5"
                android:src="@drawable/cacao"
                android:id="@+id/img3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/img3"
                android:text="\nChocolate in science and health"
                android:textSize="28sp"
                android:textColor="#33A1FF"
                android:layout_centerVertical="true"
                android:fontFamily="cursive"
                android:id="@+id/text6"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text6"
                android:text="@string/back_text4"
                android:id="@+id/text7"/>

        </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</android.support.constraint.ConstraintLayout>